Design and functionalities finished

--- a/src/components/CardsSection.module.scss
+++ b/src/components/CardsSection.module.scss
@@ -1,18 +1,118 @@
 .section {
-    height: 100%;
-    max-width: 60%;
-    margin: 2rem auto;
+  height: 100%;
+  max-width: 60%;
+  margin: 2rem auto;
+  display: grid;
+  justify-content: center;
+  padding-bottom: 4rem;
 
-    h1 {
-        text-align: center;
-        margin: 2rem;
-        font-size: 2rem;
-    }
+  @media (max-width: 85rem) {
+    max-width: 80%;
+  }
 
+  @media (max-width: 44rem) {
+    max-width: 95%;
+  }
+
+  h1 {
+    text-align: center;
+    margin: 1rem 0;
+    font-size: 2rem;
+  }
+}
+
+.config {
+  display: flex;
+  justify-content: space-between;
+}
+
+.flags {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 0.5rem;
+}
+
+.select {
+  margin-bottom: 2rem;
+
+  label {
+    margin-right: 1rem;
+    font-size: 1.25rem;
+  }
+
+  select {
+    border-radius: 5px;
+    width: 5rem;
+    height: 2rem;
+    background-color: white;
+    font-family: "Sanchez";
+  }
+}
+
+button {
+  padding: 5px;
+  margin-top: 2rem;
+  height: 3rem;
+  width: 12rem;
+  font-size: 1.25rem;
+  border-radius: 5px;
+  cursor: pointer;
+  justify-self: right;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-style: none;
+  border: 1px solid gray;
+
+  &:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    border-color: black;
+  }
+
+  .button-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
 }
 
 .card-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 5rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 3rem;
+
+  @media (max-width: 69rem) {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media (max-width: 45rem) {
+    grid-template-columns: 1fr;
+  }
+}
+
+.card-grid-flip {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 3rem;
+  animation: flip-vertical 0.75s ease-out;
+
+  @media (max-width: 69rem) {
+    grid-template-columns: 1fr 1fr;
+    animation: none;
+  }
+
+  @media (max-width: 45rem) {
+    grid-template-columns: 1fr;
+    animation: none;
+  }
+}
+
+@keyframes flip-vertical {
+  0% {
+    transform: rotateX(0deg);
+  }
+  50% {
+    transform: rotateX(180deg);
+  }
+  100% {
+    transform: rotateX(360deg);
+  }
 }
