--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -1,24 +1,24 @@
 .header {
   display: flex;
-  justify-content: space-between;
-  background-color: rgb(42, 168, 218);
+  background-color: #00acff;
   align-items: center;
   padding: 0 2rem;
   height: 5rem;
-
-  ul {
-    display: flex;
-    list-style: none;
-  }
-
-  li {
-      margin-left: 2rem;
-      font-size: 1.5rem;
-  }
+  font-family: "Sanchez", serif;
 
   h1 {
     margin: 0;
     padding: 0;
-    font-size: 2rem;
+    font-size: 2.5rem;
+    color: white;
   }
+}
+
+.description {
+  display: flex;
+  align-items: center;
+  background-color: rgb(206, 201, 201);
+  color: black;
+  padding-left: 2rem;
+  height: 2rem;
 }
