Added 20 cards per level

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("https://i.pinimg.com/originals/bd/af/76/bdaf7600ad567b8251d9951c5e397420.jpg");
+  background-image: url("./images/gray-pattern-background.jpg");
   background-repeat: repeat;
 }
 
