--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -6,11 +6,19 @@
   height: 5rem;
   font-family: "Sanchez", serif;
 
+  @media (max-width: 40rem) {
+    padding: 0 1rem;
+  }
+
   h1 {
     margin: 0;
     padding: 0;
     font-size: 2.5rem;
     color: white;
+
+    @media (max-width: 40rem) {
+      font-size: 2rem;
+    }
   }
 }
 
@@ -21,4 +29,8 @@
   color: black;
   padding-left: 2rem;
   height: 2rem;
+
+  @media (max-width: 40rem) {
+    padding-left: 1rem;
+  }
 }
